<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".instructions">

    <Button
        android:id="@+id/backbtn"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:backgroundTint="#FF9800"
        android:text="@string/back_btn"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/instructions_top_heading"
        android:textColor="#FF9800"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/whyText"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/instructions_reason"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/whyHeading"
        app:layout_constraintStart_toStartOf="@+id/whyHeading"
        app:layout_constraintTop_toBottomOf="@+id/whyHeading" />

    <TextView
        android:id="@+id/topText"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/instructions_top"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/titleText"
        app:layout_constraintStart_toStartOf="@+id/titleText"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/howHeading"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/instructions_points_heading"
        android:textColor="#FF9800"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/topText"
        app:layout_constraintStart_toStartOf="@+id/topText"
        app:layout_constraintTop_toBottomOf="@+id/topText" />

    <TextView
        android:id="@+id/howPoints"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/point1"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/howHeading"
        app:layout_constraintStart_toStartOf="@+id/howHeading"
        app:layout_constraintTop_toBottomOf="@+id/howHeading" />

    <TextView
        android:id="@+id/howPoints2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/point2"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/howPoints"
        app:layout_constraintStart_toStartOf="@+id/howPoints"
        app:layout_constraintTop_toBottomOf="@+id/howPoints" />

    <TextView
        android:id="@+id/howPoints3"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/point3"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/howPoints2"
        app:layout_constraintStart_toStartOf="@+id/howPoints2"
        app:layout_constraintTop_toBottomOf="@+id/howPoints2" />

    <TextView
        android:id="@+id/howPoints5"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/point5"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/howPoints4"
        app:layout_constraintStart_toStartOf="@+id/howPoints4"
        app:layout_constraintTop_toBottomOf="@+id/howPoints4" />

    <TextView
        android:id="@+id/howPoints4"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/point4"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/howPoints3"
        app:layout_constraintStart_toStartOf="@+id/howPoints3"
        app:layout_constraintTop_toBottomOf="@+id/howPoints3" />

    <TextView
        android:id="@+id/whyHeading"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/instructions_reason_heading"
        android:textColor="#FF9800"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/howPoints5"
        app:layout_constraintStart_toStartOf="@+id/howPoints5"
        app:layout_constraintTop_toBottomOf="@+id/howPoints5" />
</androidx.constraintlayout.widget.ConstraintLayout>