<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#FFC56B"
        app:itemIconTint="@color/nav_colors"
        app:itemTextColor="@color/nav_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

    <EditText
        android:id="@+id/personnumber"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/orange_outline"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/place_number"
        android:inputType="phone"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#910D0D0D"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/personname"
        app:layout_constraintStart_toStartOf="@+id/personname"
        app:layout_constraintTop_toBottomOf="@+id/personname" />

    <EditText
        android:id="@+id/personname"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/orange_outline"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/place_name"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#910D0D0D"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/personabout"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/orange_outline"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/place_about"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#910D0D0D"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/personnumber"
        app:layout_constraintStart_toStartOf="@+id/personnumber"
        app:layout_constraintTop_toBottomOf="@+id/personnumber" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/orange_outline"
        android:scrollbarSize="4dp"
        app:layout_constraintEnd_toEndOf="@+id/personabout"
        app:layout_constraintStart_toStartOf="@+id/personabout"
        app:layout_constraintTop_toBottomOf="@+id/personabout" />

    <Button
        android:id="@+id/personSave"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FF9800"
        android:text="@string/save_btn"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <ImageButton
        android:id="@+id/gotoHelp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/info" />

</androidx.constraintlayout.widget.ConstraintLayout>