<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".viewlist">


    <TextView
        android:id="@+id/displayAbout"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/orange_outline"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/place_about"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textColorHint="#910D0D0D"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/displayNumber"
        app:layout_constraintStart_toStartOf="@+id/displayNumber"
        app:layout_constraintTop_toBottomOf="@+id/displayNumber" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#FFC56B"
        app:itemIconTint="@color/nav_colors"
        app:itemTextColor="@color/nav_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />



    <Spinner
        android:id="@+id/Viewspinner"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/orange_outline"
        android:scrollbarSize="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/orange_outline"
        android:hint="@string/place_name"
        android:textColor="#000000"
        android:textColorHint="#910D0D0D"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/Viewspinner"
        app:layout_constraintStart_toStartOf="@+id/Viewspinner"
        app:layout_constraintTop_toBottomOf="@+id/Viewspinner" />

    <TextView
        android:id="@+id/displayNumber"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/orange_outline"
        android:hint="@string/place_number"
        android:textColor="#000000"
        android:textColorHint="#910D0D0D"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/Viewspinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Viewspinner"
        app:layout_constraintTop_toBottomOf="@+id/displayName" />

</androidx.constraintlayout.widget.ConstraintLayout>